Projeto MVC estruturado

--- a/CopaDoMundo.Web/Views/Home/Index.cshtml
+++ b/CopaDoMundo.Web/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using CopaDoMundo.Web.ViewModels
-@model List<SelecaoViewModel>
+﻿@model List<SelecaoViewModel>
 
 @{
     var temSelecao = Model != null && Model.Any();
