--- a/CopaDoMundo.Web/Views/_ViewImports.cshtml
+++ b/CopaDoMundo.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 @using CopaDoMundo.Web
-@using CopaDoMundo.Web.Models
+@using CopaDoMundo.Web.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
