--- a/CopaDoMundo.Web/Views/Shared/_Menu.cshtml
+++ b/CopaDoMundo.Web/Views/Shared/_Menu.cshtml
@@ -9,7 +9,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Core Base</a>
+
+            <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">
+                HOME
+            </a>
+
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
