--- a/CopaDoMundo.Web/wwwroot/css/site.css
+++ b/CopaDoMundo.Web/wwwroot/css/site.css
@@ -1,13 +1,22 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-image: url(../images/backgroundImg.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: contain;
+    background-color: darkgrey;
 }
 
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
 .body-content {
+    padding-top: 20px;
+    padding-bottom: 20px;
     padding-left: 15px;
     padding-right: 15px;
+    background-color: darkgrey;
 }
 
 /* Carousel */
