--- a/CopaDoMundo.Web/Views/Selecoes/Criar.cshtml
+++ b/CopaDoMundo.Web/Views/Selecoes/Criar.cshtml
@@ -13,11 +13,6 @@
         <form asp-action="Criar">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="ID" class="control-label"></label>
-                <input asp-for="ID" class="form-control" />
-                <span asp-validation-for="ID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
@@ -35,6 +30,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Listar">Voltar</a>
 </div>
 
