--- a/CopaDoMundo.Web/Views/Selecoes/Listar.cshtml
+++ b/CopaDoMundo.Web/Views/Selecoes/Listar.cshtml
@@ -16,7 +16,8 @@
         <strong>Erro!</strong> Deu ruim!
     </div>
 }
-
+<a class="btn btn-primary" href="~/Selecoes/Criar">ADICIONAR &raquo;</a>
+<br />
 @if (temSelecao)
 {
     <table class="table table-hover">
