--- a/CopaDoMundo.Web/Views/Jogadores/Criar.cshtml
+++ b/CopaDoMundo.Web/Views/Jogadores/Criar.cshtml
@@ -35,7 +35,7 @@
 
             <div class="form-group">
                 <label asp-for="Selecao" class="control-label"></label>
-                <select asp-for="SelecaoEscolhida"
+                <select asp-for="Selecao"
                         class="form-control"
                         asp-items="@(new SelectList(Model.Selecoes,"ID", "Nome"))"></select>
             </div>
