--- a/CopaDoMundo.Web/Views/Home/Contact.cshtml
+++ b/CopaDoMundo.Web/Views/Home/Contact.cshtml
@@ -3,7 +3,7 @@
 }
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
-
+<link href="~/css/index.css" rel="stylesheet" />
 <address>
     One Microsoft Way<br />
     Redmond, WA 98052-6399<br />
