--- a/CopaDoMundo.Web/Views/Jogadores/Criar.cshtml
+++ b/CopaDoMundo.Web/Views/Jogadores/Criar.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Criar";
 }
-
+<link href="~/css/index.css" rel="stylesheet" />
 <h2>Criar</h2>
 
 <h4>Cadastro de Jogador</h4>
