--- a/CopaDoMundo.Web/Views/Selecoes/Deletar.cshtml
+++ b/CopaDoMundo.Web/Views/Selecoes/Deletar.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Deletar";
 }
-
+<link href="~/css/index.css" rel="stylesheet" />
 <h3>Certeza que vai fazer isso?</h3>
 <div>
     <hr />
