--- a/CopaDoMundo.Web/Views/Selecoes/Editar.cshtml
+++ b/CopaDoMundo.Web/Views/Selecoes/Editar.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewData["Title"] = "Editar";
 }
-
+<link href="~/css/index.css" rel="stylesheet" />
 <h2>Editar</h2>
 <hr />
 <div class="row">
