--- a/CopaDoMundo.Web/Views/Shared/_Menu.cshtml
+++ b/CopaDoMundo.Web/Views/Shared/_Menu.cshtml
@@ -26,6 +26,9 @@
                     </ul>
                 </li>
             </ul>
+            <a asp-area="" asp-controller="Home" asp-action="Contact" class="navbar-brand">
+                Contato
+            </a>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
