--- a/CopaDoMundo.Web/Views/Home/Contact.cshtml
+++ b/CopaDoMundo.Web/Views/Home/Contact.cshtml
@@ -1,17 +1,24 @@
 ﻿@{
-    ViewData["Title"] = "Contact";
+    ViewData["Title"] = "Contato";
 }
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 <link href="~/css/index.css" rel="stylesheet" />
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    Resposáveis pela realização do projeto:<br />
 </address>
 
 <address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Nome: </strong> Andre Daraya <strong>RA: </strong> 40187 <strong>Email: </strong> <a href="mailto:andredaraya@gmail.com">
+        andredaraya@gmail.com
+    </a><br />
+    <strong>Nome: </strong> Breno Garcia dos Santos <strong>RA: </strong> 48829 <strong>Email: </strong> <a href="mailto:brenogarciasantos@gmail.com">
+        brenogarciasantos@gmail.com
+    </a><br />
+    <strong>Nome: </strong> Bruno Lopes <strong>RA: </strong> 42356 <strong>Email: </strong> <a href="mailto:blsilva89@gmail.com">
+        blsilva89@gmail.com
+    </a><br />
+    <strong>Nome: </strong> Felipe Oliveira <strong>RA: </strong> 44334 <strong>Email: </strong> <a href="mailto:felipeusuk@gmail.com">
+        felipeusuk@gmail.com
+    </a><br />
 </address>
