--- a/CopaDoMundo.Web/Views/Selecoes/Listar.cshtml
+++ b/CopaDoMundo.Web/Views/Selecoes/Listar.cshtml
@@ -36,7 +36,7 @@
                     <td>@item.Nome</td>
                     <td>@item.QuantidadeTitulos</td>
                     <td>
-                        <a style="padding-right: 5px" class="btn btn-primary" href="~/Selecoes/@item.ID">EDITAR &raquo;</a>
+                        <a style="padding-right: 5px" class="btn btn-primary" href="~/Selecoes/Editar/@item.ID">EDITAR &raquo;</a>
                         <a class="btn btn-primary" href="~/Selecoes/Deletar/@item.ID">REMOVER &raquo;</a>
                     </td>
                 </tr>
