--- a/CopaDoMundo.Web/Views/Jogadores/Editar.cshtml
+++ b/CopaDoMundo.Web/Views/Jogadores/Editar.cshtml
@@ -1,17 +1,17 @@
-﻿@model CopaDoMundo.Web.ViewModels.JogadorViewModel
+﻿@using CopaDoMundo.Web.Extensoes
+@model JogadorViewModel
 
 @{
-    ViewData["Title"] = "Criar";
+    ViewData["Title"] = "Editar";
 }
 <link href="~/css/index.css" rel="stylesheet" />
-<h2>Criar</h2>
-
-<h4>Cadastro de Jogador</h4>
+<h2>Editar</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Criar">
+        <form asp-action="Editar">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            @Html.HiddenFor(model => model.ID)
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
@@ -33,12 +33,28 @@
                 <span asp-validation-for="Posicao" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
-                <label asp-for="Selecao" class="control-label"></label>
-                <select asp-for="Selecao"
-                        class="form-control"
-                        asp-items="@(new SelectList(Model.Selecoes,"ID", "Nome"))"></select>
+            <div>
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>Nome</th>
+                            <th>Apelido</th>
+                            <th>Idade</th>
+                            <th>Posição</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>@Model.Nome</td>
+                            <td>@Model.Apelido</td>
+                            <td>@Model.Idade</td>
+                            <td>@Model.Posicao</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
+
 
             <div class="form-group">
                 <input type="submit" value="Salvar" class="btn btn-default" />
