--- a/CopaDoMundo.Web/Views/Jogadores/Criar.cshtml
+++ b/CopaDoMundo.Web/Views/Jogadores/Criar.cshtml
@@ -1,4 +1,5 @@
-﻿@model CopaDoMundo.Web.ViewModels.JogadorViewModel
+﻿@using CopaDoMundo.Web.Enum
+@model CopaDoMundo.Web.ViewModels.JogadorViewModel
 
 @{
     ViewData["Title"] = "Criar";
@@ -29,8 +30,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Posicao" class="control-label"></label>
-                <input asp-for="Posicao" class="form-control" />
-                <span asp-validation-for="Posicao" class="text-danger"></span>
+                @*<select asp-for="Posicao" asp-items="Html.GetEnumSelectList(typeof (ePosicao)"></select>*@
+                @*<span asp-validation-for="Posicao" class="text-danger"></span>*@
             </div>
 
             <div class="form-group">
