--- a/CopaDoMundo.Web/Views/Jogadores/Editar.cshtml
+++ b/CopaDoMundo.Web/Views/Jogadores/Editar.cshtml
@@ -12,6 +12,7 @@
         <form asp-action="Editar">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             @Html.HiddenFor(model => model.ID)
+            @Html.HiddenFor(model => model.Selecao)
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
